--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest  # 改为 Windows 因为我们需要打包 exe
+    runs-on: windows-latest
     permissions:
       contents: write
       packages: write
@@ -15,7 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
       with:
-        lfs: true  # 启用 Git LFS
+        lfs: true
     
     - name: Set up JDK 8
       uses: actions/setup-java@v4
@@ -38,7 +38,14 @@ jobs:
       run: |
         ./package.bat
         
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: todo-reminder
+        path: todo-reminder.zip
+        
     - name: Upload Release Asset
+      if: github.event_name == 'release'  # 只在发布时运行
       uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
