--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -3,8 +3,8 @@ name: Build and Release
 on:
   push:
     tags:
-      - 'v*'  # 当推送 v 开头的标签时触发
-  workflow_dispatch:  # 允许手动触发
+      - 'v*'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -40,10 +40,11 @@ jobs:
         ./package.bat
         
     - name: List Files
+      shell: pwsh
       run: |
-        dir
-        echo "Current directory content:"
-        dir /s /b
+        Get-ChildItem -Path . -Recurse
+        Write-Host "Looking for zip file:"
+        Get-ChildItem -Path . -Filter *.zip -Recurse
         
     - name: Create Release
       if: startsWith(github.ref, 'refs/tags/')
@@ -64,6 +65,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ${{ github.workspace }}/todo-reminder.zip
+        asset_path: todo-reminder.zip
         asset_name: todo-reminder.zip
-        asset_content_type: application/zip
+        asset_content_type: application/zip 
